chart/templates/tmp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: relayer-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/protocol: http
    traefik.frontend.rule.type: PathPrefix
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: "relayer.crypto.worldcoin.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "airdrops-relayer-airdrop-relayer"
                port:
                  number: 80
